<resources>
    <string name="app_name">DrinkDrinks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_clientes_info">Informacion</string>
    <string name="menu_clientes_ver">Vinos</string>
    <string name="menu_clientes_gps">¿Donde estamos?</string>
    <string name="menu_vendedor" >Vendedor</string>
    <string name="menu_cliente">Bienvenido</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_dd">Drink Drinks</string>
    <string name="menu_vendedor_ventas">Ventas</string>
    <string name="menu_vendedor_vinos">Vinos</string>
    <string name="menu_vendedor_mermas">Mermas</string>
    <string name="title_activity_maps">MAP</string>
    <string name="Buscar_sucursales">Buscar sucursales</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_crear">Nuevo vendedor</string>
    <string name="menu_editar">Editar vendedor</string>
    <string name="menu_eliminar">Eliminar vendedor</string>
    <string name="menu_creditos">Creditos</string>
    <string name="menu_listar">Vendedores</string>
    <string name="registro">Registarse</string>
    <string name="volver">Volver</string>
    <string name="nuevo">Nuevo Vendedor</string>
    <string name="idp">ID</string>
    <string name="nombrep">Nombre</string>
    <string name="fechap">Fecha Ingreso</string>
    <string name="edadp">Correo</string>
    <string name="estaturap">Sueldo mensual</string>
    <string name="pesop">Contraseña</string>
    <string name="limpiar">Limpiar</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="todo">Img_Vendedor</string>
    <string name="editar">Editar Vendedor</string>
    <string name="eliminar">Eliminar Vendedor</string>
    <string name="listar">Lista de Vendedores</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="correo">Correo</string>
    <string name="contra">Contraseña</string>

    <string name="creditos">Acerca de</string>
    <string name="univer">Instituto Tecnologico de Toluca</string>
    <string name="especialidad">Ingenieria en Sistemas Computacionales</string>
    <string name="alumno">Drink Drinks</string>
    <string name="materia">Materia: Desarrollo Movil</string>
    <string name="profesro">Profesora M:C: Rocio Elizabeth Pulido Alba</string>
    <string name="clase">Clase Lun Mier Viernes 2020</string>

    <string name="areap">Zona</string>
    <string name="Drp">Sucursal</string>
    <string name="genero">Genero</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_vendedor">VendedorActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_vendedor_ventana">VendedorVentana</string>

</resources>