<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_clientes_navigation"
    app:startDestination="@+id/nav_ver">

    <fragment
        android:id="@+id/nav_gps"
        android:name="com.example.movl_proyectofinal.cliente.gps.gps"
        android:label="@string/menu_clientes_gps"
        tools:layout="@layout/fragment_gps" />

    <fragment
        android:id="@+id/nav_ver"
        android:name="com.example.movl_proyectofinal.cliente.ver.ver"
        android:label="@string/menu_clientes_ver"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.movl_proyectofinal.cliente.informacion.info"
        android:label="@string/menu_clientes_info"
        tools:layout="@layout/fragment_ver" />

</navigation>